# UHG-Library

./: .coverage  .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  CYBERSECURITY_BENEFITS.md  Dockerfile  GLOBAL_PAYMENTS_UHG_CASES.md  Gjallarhorn1.py  Gjallarhorn2.py  Gjallarhorn3.py  Heimdal1.py  MANIFEST.in  Makefile  Miniconda3-latest-MacOSX-arm64.sh  PAYMENT_NETWORK_UHG_MAPPING.md  README.md  SECURITY.md  SOAR_WORKFLOW.md  TODO.md  UHG_3_7_NEXT_STEPS.md  UHG_IMPROVEMENTS.md  UHG_LIBRARY_ADDITIONS.md  VECTORIZATION.md  authorization heirarchy violation detection  color_test.py  docker-compose.yml  environment.mac-silicon.yml  environment.yml  install_baremetal.sh  install_mac_silicon.sh  install_splunk.py  mkdocs.yml  publish.py  pyproject.toml  requirements.txt  (+22 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
UHG/: __init__.py  core.py  projective.py  tensor.py
UHG/anomaly/: scores.py  unsupervised.py
UHG/cluster/: dbscan.py  metrics.py
UHG/datasets/: __init__.py  base.py  graph.py
UHG/manifolds/: __init__.py  base.py  hyperbolic.py  lorentz.py  siegel.py
UHG/manifolds/lorentz/: _init_.py  math.py
UHG/manifolds/siegel/: __init__.py  uhg_upper_half.py
UHG/nn/: __init__.py  attention.py  early_stopping.py  functional.py  message.py
UHG/nn/layers/: __init__.py  attention.py  base.py  conv.py  linear.py  sage.py
UHG/nn/models/: __init__.py  sage.py
UHG/optim/: __init__.py  adam.py  optimizer.py  sgd.py
UHG/samplers/: __init__.py  hyperbolic.py  langevin.py
UHG/utils/: __init__.py  cross_ratio.py  metrics.py
benchmarks/: benchmark_core_ops.py  intrusion_detection_cic10.py
build_env/: pyvenv.cfg
colab/: uhg_cic_intrusion_detection.ipynb
docs/: MAP.md  TROUBLESHOOTING.md  UHG_PRINCIPLES.md  UHG_REFERENCE.md  UHG_module_template.md  conf.py  contributing.md  index.md  index.rst  installation.rst  projective_cursor.py  requirements.txt  trial_equations.py
docs/development/: IMPLEMENTATION.md  colab-local.md  mcp.md
docs/examples/: advanced_constructions.py  interactive_uhg.ipynb  interactive_uhg_walkthrough.ipynb
docs/javascripts/: mathjax.js
docs/reference/: public-api.md  stability.md  uhg_functions_summary.md
docs/release_notes/: v0.2.0.md
examples/: auth_violation_detection.py  threat_correlation_example.py
examples/interactive/: README.md  index.html
examples/legacy/: example.py  uhg_utils.py
interactive/: index.html
mcp_server/: README.md  __init__.py  uhg_server.py
scripts/: README.md  examine_uhg.py  install_mac_silicon.sh  install_splunk.py  progress_test.py  publish.py  terminal_network_uhg.py
tests/: UHG_IDS_4_8_2.ipynb  UHG_IDS_4_9.ipynb  test_anomaly_detector.py  test_anomaly_report.py  test_anomaly_scores.py  test_cic_helpers_smoke.py  test_cluster_dbscan.py  test_cluster_metrics.py  test_cuda_ops.py  test_detector_dataframe.py  test_fundamental_measurements.py  test_fundamental_theorems.py  test_graph_build.py  test_graphsage_training_smoke.py  test_hgnn.py  test_hgt.py  test_hierarchical.py  test_manifolds.py  test_metric.py  test_new_calculations.py  test_nn_early_stopping.py  test_non_null_points.py  test_package_smoke.py  test_pattern_correlation.py  test_projective.py  test_projective_cursor.py  test_projective_deep_learning.py  test_sage.py  test_uhg_attention.py  test_uhg_core_calculations.py  test_uhg_invariants_core.py  test_uhg_layers.py  test_uhg_lines.py  test_uhg_metric.py  test_uhg_optim.py  test_uhg_points.py  test_uhg_transform.py  test_utils_metrics_vectorized.py  test_utils_schema.py  test_utils_timing.py
tests/root_legacy/: test_perpendicular_quadrance.py  test_terminal_network.py  test_uhg.py  test_uhg_integration.py
uhg/: __init__.py  _version.py  attention.py  core.py  crosslaw.md  layers.py  lines.py  metric.py  metrics.py  points.py  projective.py  tensor.py  threat_indicators.py  transform.py  utils.py
uhg/anomaly/: __init__.py  report.py  scores.py  unsupervised.py
uhg/cluster/: __init__.py  dbscan.py  metrics.py
uhg/cuda/: kernels.py  ops.py
uhg/datasets/: __init__.py  base.py  graph.py
uhg/graph/: __init__.py  build.py
uhg/manifolds/: __init__.py  base.py  euclidean.py  hyperbolic.py  lorentz.py
uhg/manifolds/lorentz/: __init__.py
uhg/nn/: __init__.py  attention.py  early_stopping.py  functional.py  hgnn.py  losses.py  message.py
uhg/nn/layers/: __init__.py  attention.py  base.py  conv.py  hierarchical.py  linear.py  sage.py
uhg/nn/models/: __init__.py  hgnn.py  hgt.py  hierarchical.py  sage.py
uhg/optim/: __init__.py  adam.py  base.py  optimizer.py  sgd.py  uhg_adam.py  uhg_sgd.py
uhg/patterns/: __init__.py  correlation.py
uhg/samplers/: __init__.py  base.py  hyperbolic.py
uhg/utils/: __init__.py  batch.py  cic_io.py  cross_ratio.py  metrics.py  sampling.py  schema.py  timing.py
use_cases/anomaly_detection/: uhg_anomaly_detection.py  uhg_anomaly_detection_2.py  uhg_anomaly_detection_fixed.py  uhg_anomaly_detection_refactored.py
use_cases/dns_exfiltration/: Gjallarjorn DNS exfiltration  detect dns exfiltration
use_cases/gjallarhorn/: Gjallarhorn3.py  test_gjallarhorn1.py
use_cases/global_payments/: authorization_hierarchy.py
use_cases/intrusion_detection/: test_intrusion_detection.py  uhg_intrusion_detection.py  uhg_intrusion_detection3.py  uhg_intrusion_detection4.py
