[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uhg"
version = "0.3.8"
description = "Universal Hyperbolic Geometry library for machine learning (projective UHG, hyperbolic GNNs, anomaly pipeline)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Zach Bovaird", email = "zach.bovaird@gmail.com" }]
keywords = ["hyperbolic", "geometry", "UHG", "pytorch", "graph-neural-networks", "anomaly-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    # Wide range so pip can resolve with PyPI torch, Colab (NumPy 2.0.x), and CPU wheels.
    # If import fails with NumPy/torch ABI errors, install a matching pair (see README).
    "numpy>=1.19.0,<3",
    "scipy>=1.6.0",
    "networkx>=2.5",
    "scikit-learn>=1.0.0",
    "pandas>=1.1.0",
    "matplotlib>=3.3.0",
    "tqdm>=4.50.0",
    "torch>=1.8.0",
    "torch-geometric>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=9.0",
]

[project.urls]
Homepage = "https://github.com/zbovaird/UHG-Library"
Documentation = "https://uhg.readthedocs.io"
Repository = "https://github.com/zbovaird/UHG-Library"
Issues = "https://github.com/zbovaird/UHG-Library/issues"
Changelog = "https://github.com/zbovaird/UHG-Library/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["uhg*"]

[tool.setuptools.package-data]
uhg = ["py.typed"]

[tool.black]
line-length = 88
# Single target avoids Black “cannot parse for py314” warnings on older runtimes; aligns with CI 3.10–3.12.
target-version = ["py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --ignore=tests/root_legacy"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests",
    "anomaly: anomaly pipeline tests",
    "numerical: numerical stability or invariant checks",
    "slow: long-running tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
explicit_package_bases = true
mypy_path = "."
# Library is not fully typed yet; CI runs mypy as a smoke check only.
check_untyped_defs = false
disallow_untyped_defs = false
# CUDA / data helpers are optional at runtime; silence import noise in CI.
[[tool.mypy.overrides]]
module = ["uhg.cuda.*", "uhg.datasets.*"]
ignore_errors = true

[tool.coverage.run]
source = ["uhg"]
omit = [
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
# Raise over time once baseline is stable (CI was failing when total line coverage < 25%).
fail_under = 0
show_missing = true
