[metadata]
description-file = README.md
license_files = LICENSE

[bdist_wheel]
universal = 1

[options]
python_requires = >=3.7
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    black>=20.8b1
    isort>=5.7.0
    flake8>=3.8.0
    mypy>=0.800
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.0
    nbsphinx>=0.8.0
    jupyter>=1.0.0
gpu =
    torch>=1.7.0+cu110
    torch-geometric>=2.0.0+cu110
cpu =
    torch>=1.7.0+cpu
    torch-geometric>=2.0.0+cpu 